changed app text

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t thomas/docker-react -f Dockerfile.dev .
   #Specify a series of actions before script.
 script:
-  - docker run thomas/docker-react npm run test -- --coverage 
+  - docker run -e CI=true thomas/docker-react npm run test 
   # -- --coveage is for stop hanging of the "npm run test"
 
 deploy:
